--- a/Doodles/Unused_ideas_Marie.ipynb
+++ b/Doodles/Unused_ideas_Marie.ipynb
@@ -47,10 +47,10 @@
     }
    ],
    "source": [
-    "l = [1,5,3]\n",
-    "a = np.ndarray(len(l))\n",
-    "a[0:len(l)] = l\n",
-    "print(a)"
+    "#l = [1,5,3]\n",
+    "#a = np.ndarray(len(l))\n",
+    "#a[0:len(l)] = l\n",
+    "#print(a)"
    ],
    "metadata": {
     "collapsed": false,
@@ -80,8 +80,8 @@
     }
    ],
    "source": [
-    "img = sk.imread(\"../Data/N2DH-GOWT1/img/t01.tif\") #Bild laden\n",
-    "print (img.shape)"
+    "#img = sk.imread(\"../Data/N2DH-GOWT1/img/t01.tif\") #Bild laden\n",
+    "#print (img.shape)"
    ],
    "metadata": {
     "collapsed": false,
@@ -106,8 +106,8 @@
     }
    ],
    "source": [
-    "img_n = ip.img_resize(img,400,400)\n",
-    "ip.show_image(img_n,15,8)"
+    "#img_n = ip.img_resize(img,400,400)\n",
+    "#ip.show_image(img_n,15,8)"
    ],
    "metadata": {
     "collapsed": false,
@@ -121,7 +121,7 @@
    "execution_count": 56,
    "outputs": [],
    "source": [
-    "t = np.zeros((5,5))"
+    "#t = np.zeros((5,5))"
    ],
    "metadata": {
     "collapsed": false,
@@ -149,12 +149,12 @@
     "from PIL import Image\n",
     "\n",
     "\n",
-    "test = np.zeros([100,100])\n",
-    "test[30:40,30:40] = 1\n",
-    "ip.show_image(test,15,8)\n",
+    "#test = np.zeros([100,100])\n",
+    "#test[30:40,30:40] = 1\n",
+    "#ip.show_image(test,15,8)\n",
     "\n",
-    "im = Image.fromarray(test)\n",
-    "im.save(\"unittest.tif\")\n",
+    "#im = Image.fromarray(test)\n",
+    "#im.save(\"unittest.tif\")\n",
     "\n",
     "\n"
    ],
@@ -145150,7 +145150,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "image_r_copy = region_merging_size(image_intensity,image_r_copy, result_intensity_merging[1],result_intensity_merging[2], 1000)\n",
+    "#image_r_copy = region_merging_size(image_intensity,image_r_copy, result_intensity_merging[1],result_intensity_merging[2], 1000)\n",
     "ip.show_image(image_r_copy,15,8)"
    ],
    "metadata": {
