--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -261,8 +261,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
+   "outputs": [],
+   "source": [
+    "def anisotropic_filter(img):\n",
+    "    img_copy = img.copy()\n",
+    "    img_anisotropic = anisotropic_diffusion(img_copy)\n",
+    "    return img_anisotropic"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/johannamoeller/opt/anaconda3/envs/environmentGroup4/lib/python3.9/site-packages/medpy/filter/smoothing.py:155: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  deltas[i][slicer] = numpy.diff(out, axis=i)\n",
+      "/Users/johannamoeller/opt/anaconda3/envs/environmentGroup4/lib/python3.9/site-packages/medpy/filter/smoothing.py:164: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  matrices[i][slicer] = numpy.diff(matrices[i], axis=i)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": "<Figure size 1080x576 with 2 Axes>",
