--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -171,7 +171,7 @@
     }
    ],
    "source": [
-    "test1 = ip.remove_bright_spots(image2, 110)\n",
+    "test1 = ip.remove_bright_spots(image2, 110, 60)\n",
     "ip.show_image(test1, 15, 8)"
    ],
    "metadata": {
