--- a/Doodles/Unused_ideas_Marie.ipynb
+++ b/Doodles/Unused_ideas_Marie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -14,6 +14,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Using matplotlib backend: Qt5Agg\n",
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "Using matplotlib backend: Qt5Agg\n",
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "Using matplotlib backend: Qt5Agg\n",
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "Using matplotlib backend: Qt5Agg\n",
+      "Populating the interactive namespace from numpy and matplotlib\n",
+      "Using matplotlib backend: Qt5Agg\n",
+      "Populating the interactive namespace from numpy and matplotlib\n",
       "Using matplotlib backend: Qt5Agg\n",
       "Populating the interactive namespace from numpy and matplotlib\n"
      ]
@@ -34,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "def find_neigboring_regions(reg):\n",
@@ -265,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stderr",
@@ -2591,7 +2601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
