small changes dice score and unused ideas

--- a/Doodles/Unused_ideas_Marie.ipynb
+++ b/Doodles/Unused_ideas_Marie.ipynb
@@ -37,7 +37,7 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "def find_neigboring_regions(reg):\n",
+    "def find_neighboring_regions(reg):\n",
     "    \"\"\"\n",
     "\n",
     "    :param reg:\n",
@@ -97,7 +97,7 @@
     "    max_intensity = np.amax(img)\n",
     "    inter_region_distances = np.ones((int(max_region), int(max_region)))\n",
     "    means = srg.mean_region(img, reg)\n",
-    "    inter_region_neighbors = find_neigboring_regions(reg)\n",
+    "    inter_region_neighbors = find_neighboring_regions(reg)\n",
     "\n",
     "    for row_number in range(0, int(max_region)):\n",
     "        neighboring_regions = np.where(inter_region_neighbors[row_number, :] == 1)[0]\n",
