--- a/Doodles/region_merging_bugfix.ipynb
+++ b/Doodles/region_merging_bugfix.ipynb
@@ -18,7 +18,7 @@
     "from Functions import seed_detection as sd\n",
     "import skimage.io as sk\n",
     "\n",
-    "def find_neigboring_regions(reg):\n",
+    "def find_neighboring_regions(reg):\n",
     "    \"\"\"\n",
     "\n",
     "    :param reg:\n",
@@ -78,7 +78,7 @@
     "    max_intensity = np.amax(img)\n",
     "    inter_region_distances = np.ones((int(max_region), int(max_region)))\n",
     "    means = srg.mean_region(img, reg)\n",
-    "    inter_region_neighbors = find_neigboring_regions(reg)\n",
+    "    inter_region_neighbors = find_neighboring_regions(reg)\n",
     "\n",
     "    for row_number in range(0, int(max_region)):\n",
     "        neighboring_regions = np.where(inter_region_neighbors[row_number, :] == 1)[0]\n",
