autoreload in doodles

--- a/Doodles/Unused_ideas.ipynb
+++ b/Doodles/Unused_ideas.ipynb
@@ -28,8 +28,10 @@
    "source": [
     "%pylab\n",
     "%matplotlib inline\n",
-    "\n",
-    "import skimage.io"
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import skimage.io\n",
+    "from Functions import image_processing as ip"
    ],
    "metadata": {
     "collapsed": false,
@@ -63,11 +65,11 @@
    ],
    "source": [
     "img2_gt = skimage.io.imread(\"../Data/N2DH-GOWT1/gt/man_seg01.tif\")\n",
-    "imshow(img2_gt, \"gray\")\n",
+    "ip.show_image(img2_gt, 15, 8)\n",
     "\n",
     "import PIL\n",
     "from PIL import Image\n",
-    "im = Image.fromarray(img_new_gt)\n",
+    "im = Image.fromarray(img2_gt)\n",
     "im.save(\"new_gt.tif\")\n",
     "\n",
     "\n",
