--- a/Doodles/Dice_score.ipynb
+++ b/Doodles/Dice_score.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "import skimage.io as sk\n",
-    "import numpy as np\n",
+    "#  import numpy as np\n",
     "from Functions import image_processing as ip\n",
     "from Functions import dice_score as ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -56,14 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.922304174427804\n",
-      "0.9264\n"
+     "ename": "NameError",
+     "evalue": "name 'segmented_image' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-5-0f1f8e2c4df2>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mdice_score_weight\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mds\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mevaluate_accuracy_weighted\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msegmented_image\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mgt_resize\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[0mdice_score_unweight\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mds\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mevaluate_accuracy_unweighted\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msegmented_image\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mgt_resize\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdice_score_weight\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdice_score_unweight\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\PycharmProjects\\2021-topic-04-team-04\\Functions\\dice_score.py\u001B[0m in \u001B[0;36mevaluate_accuracy_weighted\u001B[1;34m(segmented_img, gt)\u001B[0m\n\u001B[0;32m    116\u001B[0m     \u001B[0mclipped_gt\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mgt_clip\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mgt\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    117\u001B[0m     \u001B[0mbackground_number\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mfind_background_number\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msegmented_img\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 118\u001B[1;33m     \u001B[0mclipped_segmented_image\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0msegmented_image_clip\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msegmented_img\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mbackground_number\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    119\u001B[0m     \u001B[0mdice_score\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdice_score_weighted\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mclipped_segmented_image\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mclipped_gt\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    120\u001B[0m     \u001B[1;32mreturn\u001B[0m \u001B[0mdice_score\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\PycharmProjects\\2021-topic-04-team-04\\Functions\\dice_score.py\u001B[0m in \u001B[0;36msegmented_image_clip\u001B[1;34m(segmented_img, background_region)\u001B[0m\n\u001B[0;32m     21\u001B[0m     \u001B[1;33m:\u001B[0m\u001B[1;32mreturn\u001B[0m\u001B[1;33m:\u001B[0m \u001B[0mclipped\u001B[0m \u001B[0mimage\u001B[0m \u001B[0mwhere\u001B[0m \u001B[0mall\u001B[0m \u001B[0mcells\u001B[0m \u001B[0mhave\u001B[0m \u001B[0mvalue\u001B[0m \u001B[1;36m1\u001B[0m \u001B[1;32mand\u001B[0m \u001B[0mbackground\u001B[0m \u001B[0mhas\u001B[0m \u001B[0mvalue\u001B[0m \u001B[1;36m0\u001B[0m \u001B[1;33m(\u001B[0m\u001B[1;36m2\u001B[0m\u001B[0mD\u001B[0m \u001B[0marray\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     22\u001B[0m     \"\"\"\n\u001B[1;32m---> 23\u001B[1;33m     \u001B[1;32mfor\u001B[0m \u001B[0mpixel\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mndindex\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msegmented_image\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mshape\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     24\u001B[0m         \u001B[0mregion\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0msegmented_img\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mpixel\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     25\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[0mregion\u001B[0m \u001B[1;33m==\u001B[0m \u001B[0mbackground_region\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'segmented_image' is not defined"
      ]
     }
    ],
