--- a/Doodles/Old_unseeded_region_growing.ipynb
+++ b/Doodles/Old_unseeded_region_growing.ipynb
@@ -20,7 +20,8 @@
    ],
    "source": [
     "# unseeded region growing\n",
-    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "import skimage.io as sk\n",
     "import numpy as np\n",
     "from Functions import image_processing as ip\n",
