--- a/Region_Merging.ipynb
+++ b/Region_Merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -16,6 +16,8 @@
    "source": [
     "%pylab\n",
     "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "import skimage.io as sk\n",
     "from Functions import image_processing as ip\n",
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stderr",
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "\n",
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "im2 = Image.fromarray(image_result2)\n",
