--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -23,6 +23,8 @@
     "# import numpy as np\n",
     "%pylab\n",
     "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "from Functions import image_processing as ip\n",
     "from Functions import seed_detection as sd\n",
