old files überarbeitet

--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -100,7 +100,7 @@
    "source": [
     "img_small = image[300:350, 400:450]\n",
     "ip.show_image(img_small, 15, 8)\n",
-    "img_r = sd.seeds(img_small, 0.1, 1)\n",
+    "img_r = sd.seeds(img_small, 1)\n",
     "ip.show_image(img_r, 15, 8)\n",
     "img_r = sd.seed_merging(img_r)\n",
     "ip.show_image(img_r, 15, 8)"
