--- a/report_ina.ipynb
+++ b/report_ina.ipynb
@@ -19,7 +19,7 @@
     "Another implementation of the dice score would be weighting equally between background and cell pixels. This makes it possible\n",
     "to consider even small regions, for example when there are proportionally few cells compared to the background.\n",
     "\n",
-    "$$\\overline{DSC}=\\frac{1}{2} \\sum\\limits_{i=1}^{2} \\\\left frac{2 \\times |S_i \\cap G_i|}{|S_i|+|G_i|}$$\n",
+    "$$\\overline{DSC}=\\frac{1}{2} \\sum\\limits_{i=1}^{2} \\left(\\frac{2 \\times |S_i \\cap G_i|}{|S_i|+|G_i|}\\right)$$\n",
     "\n",
     "Thereby, two regions were considered: cells and background. For each region, the dice score was calculated individually\n",
     "and then weighted equally. With that every region has the same influence on the result in spite of the size.\n",
@@ -29,7 +29,7 @@
     "\n",
     "\n",
     "equation for standard deviation\n",
-    "$$ \\sigma = \\sqrt(\\left\\frac{1}{9}\\sum\\limits_{i=1}^{9}(x_i-\\overline{x})^2\\right)$$\n",
+    "$$ \\sigma = \\sqrt{\\left(\\frac{1}{9}\\sum\\limits_{i=1}^{9}(x_i-\\overline{x}\\right)^2}$$\n",
     "<br>\n",
     "$$x_i$$\n",
     "$$\\overline{x}$$\n",
