images and equations

--- a/report_ina.ipynb
+++ b/report_ina.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "\n",
     "equation euclidean distance\n",
-    "$$d_{max} = max_{1\\leq i\\leq 8} {d_i = \\frac{x-x_i}{x}}$$\n",
+    "$$d_{max} = \\mathop{max}_{1\\leq i\\leq 8} \\left\\{ d_i = \\frac{x-x_i}{x} \\right\\}$$\n",
     "<br>\n",
     "$$d_{max}$$\n",
     "$$d_i$$\n",
