--- a/Region_Merging.ipynb
+++ b/Region_Merging.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "outputs": [
     {
      "name": "stdout",
@@ -240,7 +240,65 @@
       "3000\n",
       "4000\n",
       "5000\n",
-      "6000\n"
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "2min 42s ± 3.53 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -251,16 +309,27 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "The paper (Quelle) the used seeded region growing algorithm is based on labels every pixel one by one. This leads to\n",
-    "huge runtimes. W"
+    "The paper (Quelle) the used seeded region growing algorithm is based on labels every pixel one by one which leads to\n",
+    "long runtimes. That's why many runtime problems were encountered, especially with the first seeded region growing\n",
+    "algorithm implemented.\n",
+    "\n",
+    "In the first region growing algorithm all pixels bordering an existing region are stored in a list. For loops are used\n",
+    "to iterate over this list to find the intensity distance of these pixels to its closest neighboring region. It was\n",
+    "observed that with this algorithm its impossible to segment the whole image in a sensible time with the available\n",
+    "hardware.\n",
+    "\n",
+    "Hence, a new algorithm was implemented. It was evaluated to use numpy arrays or pandas data frames to vectorize the\n",
+    "algorithm and decided to use numpy because of faster runtimes. Instead of storing only the smallest distance of every\n",
+    "neighboring pixel to one of its adjacent regions, we are storing every distance. Moreover, the use of for loops was\n",
+    "almost completely reduced, and the algorithm was vectorized. A huge decrease of runtime could be achieved which allows\n",
+    "to execute the region growing algorithm on a whole image overnight."
    ],
    "metadata": {
     "collapsed": false,
