--- a/report_seeded_region_growing.ipynb
+++ b/report_seeded_region_growing.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "Tutor: Nicholas Peschke\n",
     "\n",
-    "Group 04: Marie Becker, Ina Jung, Laura Kaschnitz, Johanna Möller"
+    "Group 04: Marie Becker, Ina Jung, Laura Kaschnitz, Johanna Möller\n",
+    "\n",
+    "<br>"
    ],
    "metadata": {
     "collapsed": false,
@@ -23,7 +25,9 @@
    "source": [
     "**Abstract**\n",
     "\n",
-    "xxx"
+    "xxx\n",
+    "\n",
+    "<br>"
    ],
    "metadata": {
     "collapsed": false
@@ -650,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "image_regions_from_seeds = sd.seed_merging(image_seeds)"
