dice score copy ding

--- a/Unseeded_region_growing_algorithm.ipynb
+++ b/Unseeded_region_growing_algorithm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 247,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 248,
    "outputs": [],
    "source": [
     "#test2 = urg.unseeded_region_growing_algorithm(img_small,(0,0), 5)\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 249,
    "outputs": [
     {
      "name": "stdout",
@@ -76,7 +76,7 @@
     "test3 = rm.region_merging(image_urg.copy(), image, 0.001, 10000)\n",
     "ip.show_image(test3, 15, 8)\n",
     "\n",
-    "score_merging = ds.evaluate_accuracy_weighted(test3.copy(), ground_truth.copy())\n",
+    "score_merging = ds.evaluate_accuracy_weighted(test3, ground_truth)\n",
     "print(score_merging)"
    ],
    "metadata": {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 250,
    "outputs": [
     {
      "data": {
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "test4 = ip.median_filter(test3.copy(), 3)\n",
+    "test4 = ip.median_filter(test3, 3)\n",
     "ip.show_image(test4, 15, 8)"
    ],
    "metadata": {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 251,
    "outputs": [
     {
      "name": "stdout",
@@ -146,9 +146,9 @@
     }
    ],
    "source": [
-    "score = ds.evaluate_accuracy_weighted(test4.copy(), ground_truth.copy())\n",
+    "score = ds.evaluate_accuracy_weighted(test4, ground_truth)\n",
     "print(score)\n",
-    "score2 = ds.evaluate_accuracy_unweighted(test4.copy(), ground_truth.copy())\n",
+    "score2 = ds.evaluate_accuracy_unweighted(test4, ground_truth)\n",
     "print(score2)\n",
     "ip.show_image(test4, 15, 8)\n",
     "ip.show_image(ground_truth_clipped, 15, 8)"
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 252,
    "outputs": [],
    "source": [
     "im = Image.fromarray(test4)\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 252,
    "outputs": [],
    "source": [],
    "metadata": {
