code to run seeded rg

--- a/report_seeded_region_growing.ipynb
+++ b/report_seeded_region_growing.ipynb
@@ -108,6 +108,7 @@
     "\n",
     "N2DL-HeLa shows GFP labeled core histone 2b proteins from human cervical carcinomas.\n",
     "Overall, the cell density is high whereas the resolution is low, and the cells vary greatly in brightness.\n",
+    "Furthermore, the intensity values of the images lie between 33 000 and 36 000.\n",
     "There are no interfering effects due to reflections or blurs.\n",
     "\n",
     "The last dataset NIH3T3 consists of mouse embryo fibroblasts.\n",
